--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "clsx": "^2.1.0",
+    "planck": "^1.0.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "zustand": "^5.0.0-rc.2"
